# mafia-code-test

./: CMakeLists.txt  Gangster.cpp  Gangster.h  LICENSE  Mafia.cpp  Mafia.h  README.md  STATEMENT.md  main.cpp
Test/: FindCppUnit.cmake  Tests.cpp  Tests.h  tests.cpp
